Adding authentication with jsonwebtoken
